--- a/seminar/cql_drl_presentation/script/main.tex
+++ b/seminar/cql_drl_presentation/script/main.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath,amssymb}
 \usepackage{setspace}
 \usepackage{enumitem}
+\usepackage{kotex}
 
 \setstretch{1.2}
 
@@ -10,204 +11,152 @@
 
 \section*{Talk Script: An Improvement to Conservative Q-Learning}
 
-\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
+Hello, everyone. Today I will present on ``An Improvement to Conservative Q-Learning''. When I chose this topic, my background in offline RL was still shallow, so I started from a slightly older but fundamental paper and tried to identify and explore a possible improvement to it.
 
-Hello everyone, my name is Gwanwoo Choi. Today I am going to talk about \emph{An Improvement to Conservative Q-Learning} for offline reinforcement learning.
-
-I will briefly review offline RL and Conservative Q-Learning, then present my modification to the CQL penalty and an additional KL regularization for continuous action spaces, followed by experiments on D4RL AntMaze.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-In this part, I briefly review the offline RL setting and notation.
-
-We work with a Markov Decision Process with a state space, action space, transition dynamics, reward, and discount factor. I denote the policy we want to learn by $\pi(a \mid s)$, and the behavior policy that generated the dataset by $\beta(a \mid s)$.
-
-In offline RL, we never interact with the environment during training. Instead, we are given a fixed dataset of state, action, reward, and next-state tuples from the unknown behavior policy, and we want to learn a policy that maximizes the expected discounted return at test time.
+Before we get into the main idea, let me briefly review the preliminaries of offline reinforcement learning.
+Offline RL has the same basic MDP setup as standard RL, but the key difference is that we cannot interact with the environment during training. We must learn the agent purely from a fixed transition dataset. I will call the policy that collected this dataset the behavior policy, denoted by $\beta$.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-Next, I explain why offline RL is challenging.
-
-In a standard actor--critic setup, the critic is trained to match the reward plus discounted next Q-value, where the next action comes from the current policy. In offline RL, these next actions can easily be out-of-distribution relative to the dataset.
-
-Because the critic must extrapolate to unseen state--action pairs, it can badly overestimate Q-values there. Those overestimates are propagated backward through the Bellman updates and exploited by the policy, creating a feedback loop that leads to poor test-time performance.
+Next, I will briefly explain the main difficulty of offline RL, and then how CQL tries to address it.
+In offline RL we do not know the true transition dynamics; we only see the next state through the dataset. So when we learn the Q-function, TD learning is performed only on next-states that actually appear in the dataset.
+The more serious issue comes from how actions are sampled. In the loss, which is highlighted in red on the slide, the next state--action pair $s^\prime, a^\prime$ sampled from the current policy is used as the target in TD learning.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-To make this more concrete, consider Soft Actor-Critic, or SAC, in an offline setting.
-
-In SAC, the policy tries to maximize the critic's Q-value while keeping high entropy, and the critic predicts the reward plus discounted next Q-value when the next action is drawn from the current policy.
-
-Online, this works because new data keeps the critic grounded. Offline, the next actions from the SAC policy are often out-of-distribution, so the critic's predictions there can be severely overestimated, and these optimistic values are reinforced by both the critic and the policy updates.
+But can we really trust this $s^\prime, a^\prime$ pair? It may not exist in the dataset at all. If $Q(s^\prime, a^\prime)$ is higher than the true Q-value, what happens?
+Then the TD target becomes larger than the correct target, and the current state--action pair $s, a$ is updated toward an overestimated value. This creates an overestimation problem.
+If you look at the purple-highlighted part of the formula on the slide, you can see that this overestimated Q-value is then used again when we update the policy. The policy is trained to choose actions $a$ that have higher Q-values, so it starts to sample these overestimated actions with high probability. If those actions are actually very poor in the true environment, the offline training will fail badly.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-Next, I introduce Conservative Q-Learning, or CQL, which directly targets this overestimation problem.
+Conservative Q-Learning is proposed to directly address this overestimation of Q-values.
+In the formula, the part labeled ``standard Bellman error'' is the usual critic learning term I described for offline RL. On the left, there is an additional ``conservative penalty'' term, which pushes Q-values down overall. Because of the $\min_\theta$ operator, $Q_\theta$ is optimized to be smaller.
+If you look closely, the actions used when reducing Q-values are sampled from a policy distribution $\mu$. This distribution is shaped in two ways: by the regularizer on $\mu$ on the right, which encourages some randomness, and by the conservative penalty itself, which encourages sampling actions with high Q-values. In summary, a well-chosen $\mu$ will selectively pick out high-Q actions, and the algorithm then learns to push those Q-values down. This offsets the overestimation that arises from the standard Bellman error term.
 
-The idea is to learn Q-values that are intentionally conservative for actions that look out-of-distribution, while keeping Q-values reasonable on the data.
-
-CQL adds an extra term to the critic objective that pushes down Q-values for actions sampled from an auxiliary exploration policy $\mu$ that differs from the behavior policy $\beta$. Since actions from $\mu$ on dataset states are likely to be off-support, lowering their Q-values makes the critic pessimistic on OOD actions.
-
-However, simply penalizing under $\mu$ can be too conservative even for actions that lie on the dataset. The refined objective instead penalizes the difference between the average Q-value under $\mu$ and the average Q-value on the dataset, still pushing down likely OOD actions while relatively \emph{depenalizing} in-distribution ones. This preserves Q-values on the data while remaining conservative on OOD actions.
-
-\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
-
-This is the overall CQL framework in mathematical form.
-Note that the policy improvement process of CQL framework is same with the policy improvement method of SAC.
-CQL framework is only applied to the policy evaluation process.
+With the first objective alone, we can prevent overestimation, but Q-values that are too low are also undesirable. To address this, the second objective slightly modifies the first one.
+In the second objective, if the action $a$ is sampled from $\mu$, the Q-value at $(s,a)$ is pushed down, but if $a$ comes from the dataset, the Q-value is increased by roughly the same amount that it was previously reduced. In other words, for actions not in the dataset we keep Q-values low, but for actions in the dataset we avoid applying the conservative penalty and rely only on the standard Bellman error to update Q.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-Now I focus on a particular instance of the CQL framework called CQL H, in a continuous action space.
+So far I have explained how CQL learns the critic. Now let me explain how the policy is trained.
+Policy learning in CQL is essentially the same as in SAC. A term like $\alpha \log \pi(a|s)$ appears, which is the entropy term that encourages the policy to produce more random actions.
+In a typical offline RL method, using Q-values for highly random actions could easily cause severe OOD problems and destabilize training. However, in CQL, Q-values for OOD actions have already been pushed down sufficiently, so this entropy-driven exploration is much safer.
 
-At the end of the policy evaluation equation, the regularizer $R$ on the auxiliary policy $\mu$ is usually its entropy. By this equation, the optimal $\mu$ puts more mass on actions with larger Q-values, and explores the action space to penalize Q values more aggressively.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-The conservative term of CQL H can be solved as a closed form. A log-sum-exp over Q-values at each state minus the expected Q-value under the behavior policy. In continuous action spaces, this log-sum-exp is approximated by sampling actions from proposals like a uniform distribution and the current policy, and using importance sampling.
+Now I will introduce the two baselines I use in my experiments: CQL H and CQL H Lagrangian.
+
+We have seen the general learning mechanism of CQL. Next I will show how it is actually implemented in code.
+First, CQL($\mathcal{H}$) is obtained by choosing the regularization term on the OOD exploration distribution $\mu$ to be its entropy and then analytically solving for the optimal $\mu$. In the original CQL critic objective, both Q and $\mu$ are learned, but in CQL H we can substitute the optimal $\mu$ back into the objective and obtain a formulation where only Q is learned.
+
+This leads to a new problem: computing the log-sum-exp over Q-values for all actions is intractable in continuous action spaces, since in principle we would have to integrate over infinitely many actions. To bypass this, we use importance sampling. The term $w$ in the equation is an importance-sampling-based approximation of this log-sum-exp, and its detailed form is shown in the slide.
+Thanks to importance sampling, we can sample actions from distributions that are easy to sample from, such as a uniform distribution or the current policy. In the paper, actions are sampled from three distributions: a uniform distribution over actions, the current policy given the current state, and the current policy given the next state, and these samples are used to approximate the log-sum-exp Q.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-There is also a Lagrangian version, where the coefficient $\alpha'$ is not a constant but is a learnable dual variable enforcing that the difference between the log-sum-exp surrogate and the average Q on the dataset matches a target threshold, so the degree of conservatism adapts during training.
+There is a small modification of CQL H called CQL H Lagrangian.
+In CQL H, we learn to reduce the gap between $w$ and Q, that is, the difference between the log-sum-exp surrogate and the dataset Q-values. However, the hyperparameter $\alpha^\prime$ that controls how strongly this gap affects the critic learning is fixed. In reality, when the gap is large we would like $\alpha^\prime$ to be large, and when the gap is small we would like $\alpha^\prime$ to be small, but CQL H keeps it constant.
+
+CQL Lagrangian addresses this by making $\alpha^\prime$ a learnable parameter. In the equations, you can see that we now update both $\theta$, the Q-function parameters, and $\alpha^\prime$.
+The red-highlighted part in the objective is the update rule for $\alpha^\prime$: it adjusts $\alpha^\prime$ so that the gap between $w$ and Q moves toward a target value $\tau$. If the gap is larger than $\tau$, then $\alpha^\prime$ increases to push the gap down; if the gap is smaller than $\tau$, then $\alpha^\prime$ decreases, making the method less conservative.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-To better understand CQL and access towards my motivation, it is useful to look at the update of Q value function.
-
-If we differentiate the CQL objective with respect to in dataset Q-values, the update can be viewed as a standard Bellman backup minus a penalty measuring how different the auxiliary policy $\mu$ is from the behavior policy $\beta$ at each state--action pair, via the ratio of their probabilities.
-
-So the key conservative signal in CQL is this density-ratio-based penalty: when $\mu$ puts much more mass on an action than $\beta$ does, its Q-value is pushed down strongly. This depends only on the probability ratio, not on the actual geometric distance between actions.
+To look for possible improvements to CQL, I focused on its penalization term.
+If we assume that Q is a convex function in CQL($\mathcal{H}$), we can derive the optimal Q-value by following the derivation shown on this slide. Because of convexity, we can find the Q that makes the derivative of the objective zero.
+When we differentiate and simplify, we obtain a Q-update rule with the red term added as a penalty. This red term can be viewed as the essential Q penalization term in CQL.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-My idea is to modify this penalization term so that it directly reflects distance-awareness between actions in continuous action space.
+My idea is to modify this penalization term.
+In the original CQL term, the penalty is based on the probability density ratio between the OOD exploration distribution $\mu$ and the behavior policy $\beta$. In contrast, I propose to use the Euclidean distance between actions as an indicator of how out-of-distribution an action is in continuous space.
+The new penalty term, shown in red on the slide, updates Q by subtracting the expected Euclidean distance between actions sampled from the behavior policy, that is, from the dataset, and actions sampled from the current policy.
 
-Instead of using the ratio between $\mu$ and $\beta$, I subtract from the Bellman target a term proportional to the average Euclidean distance between actions sampled from the current policy and the corresponding dataset action at the same state, approximated using a finite number of samples.
+We approximate the expectation of the $L_2$ distance between $a$ and $\hat{a}$ by sampling $N$ actions from the policy at a given state $s$ and averaging their Euclidean distances to the dataset action.
 
-If the policy proposes actions far from what is seen in the dataset, the Q-value at that state--action pair is penalized strongly; if the proposed actions are close, the penalty is small. This ties conservatism to geometric distance in action space rather than only to density ratios.
-
-\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
-
-Let me give you a concrete counter-example where density ratios fail.
-Consider two actions, $a_1$ and $a_2$.
-
-Let's assume their $L_2$ distance is near zero ($|a_1 - a_2| \approx 0$).
-Semantically, in a continuous control task like a robot moving a joint, these represent almost the exact same movement.
-
-However, their probability densities could be vastly different. 
-Suppose the current policy $\mu$ puts high probability on $a_1$ (0.9), while the behavior policy $\beta$ puts low probability (0.1).
-This big difference between probabilites leads to a large panelty.
-
-This seems unfair. The action $a_1$ is physically identical to $a_2$, yet it gets penalized heavily just because of a density mismatch.
-My method, using $L_2$ distance, would yield a penalty near zero, correctly reflecting that these actions are semantically similar. This was the core hypothesis of my work.
+Here, $N$ is a hyperparameter: larger $N$ gives a more accurate approximation of the expectation but increases computational cost.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
+This slide directly compares the CQL penalization and the penalization in my method.
+To show why my penalty might be advantageous, let me give a simple example. The CQL penalty is not distance-aware: it uses only the ratio of probabilities between $\mu$ and $\beta$ for a given action. In other words, it completely ignores where actions lie in Euclidean space.
+Suppose we have two actions, $a_1$ and $a_2$, and the probabilities of sampling them from $\mu$ and $\beta$ are shown on the slide. If the Euclidean distance between $a_1$ and $a_2$ is very small, my $L_2$-based penalty will also be small, because the actions are semantically almost the same.
+However, under CQL, if we compute the penalty terms for $a_1$ and $a_2$ using the density ratio, we get large values like 8 or minus eight-ninths. So two actions that are almost identical in Euclidean space receive very different and possibly large penalties solely because $\mu$ and $\beta$ assign different probabilities to them.
+In this sense, my penalty term is distance-aware, while the CQL penalty term is distance-agnostic.
 
-
-Based on this new penalty, I define my first method, ``Ours without KL regularization''.
-
-In policy evaluation, the critic still matches the usual Bellman target, but now minus the average $L_2$ distance between policy actions and the dataset action at each state, scaled by a coefficient and approximated with a finite number of samples.
-
-In policy improvement, the policy is updated simply to maximize these conservative Q-values, without an explicit entropy term or separate exploration policy $\mu$. The only driver of conservatism is the $L_2$ penalty inside the critic.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-Now I move on to experiments.
+Now let me summarize the algorithm I propose, called Framework 1.
+In the critic update, I use exactly the Q-update equation described earlier, with the $L_2$-based penalty term.
+The policy improvement step is slightly different from CQL: here I remove the entropy term, because in my method there is no separate exploration distribution $\mu$ used in critic learning. As a result, my critic objective alone does not provide the same kind of conservatism for OOD actions as CQL.
 
-Due to limited time, I only evaluate on the D4RL AntMaze-v2 benchmark, which is a challenging offline RL environment. I compare three algorithms: CQL H, CQL Lagrangian, and my first approach without KL regularization.
-All of these were implemented from scratch, since alot of CQL code implementations are different.
+Since this conservatism is reduced, I chose to simplify policy learning: the policy is trained only to maximize the conservative Q-values, without an entropy bonus. If we added an entropy term, the policy would be pushed toward random actions, and I expected this to make training unstable in the offline setting.
+Without the entropy term, the policy does not deliberately sample highly random actions, which should reduce the risk that the critic overestimates Q-values for OOD actions.
 
-\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
-
-
-Across methods, I use common hyperparameters: the Adam optimizer, discount factor $0.99$, target update rate $0.005$, batch size 256, one million gradient steps, three hidden layer policy and Q networks. Each hidden layer has 256 units and use ReLU activation, Also all algorithms adopt hyperbolic tangent transformed Gaussian policy, and a two-critic ensemble. All performance is estimated by averaging results over four seeds and multiple evaluation rollouts.
-
-\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
-
-The first set of results compares CQL H, CQL Lagrangian variant, and my approach without KL regularization on several AntMaze tasks.
-
-On the easiest task, AntMaze-umaze-v2, my method reaches a moderate score but still trails the original CQL baseline. On the medium and large variants, performance is generally poor for all methods, and my method shows worse performance than baselines.
+I call this algorithm Framework 1 because later I will introduce a second version, Framework 2, that builds on top of it to further improve performance.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-I also ran experiments about the number of sampled actions in the $L_2$ penalty. Varying the number of samples from five to twenty-five did not show strong trends, but $N=10$ shows slightly better performance overall, so I chose $N=10$ by default. 
+For baselines, I focus on two algorithms: CQL($\mathcal{H}$) and CQL($\mathcal{H}$) Lagrangian. Although many newer offline RL methods outperform CQL in terms of raw performance, I do not compare against them here because my work specifically builds on CQL. It would not be meaningful to compare my early-stage method directly against the latest state-of-the-art algorithms.
+
+For the environment, I use AntMaze from the D4RL benchmark, which is a common testbed for offline RL. AntMaze is a maze environment where an ant-shaped agent must be controlled to reach a goal position as quickly as possible. In the figure, the star indicates the goal location, and the agent must learn to follow the red optimal path through the maze.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-I additionally studied the effect of the $L_2$ penalty coefficient $\alpha'$.
-Varying $\alpha'$ over a wide range from very small to 0.03,
-I found that the value $10^{-12}$, which is nearly zero, lead to poor performance, likely because the penalty is too weak to prevent overestimation.
+Next, let me briefly summarize the hyperparameters I use. The hyperparameters shown on this slide are shared across both my first and second frameworks.
+I keep the optimizer, batch size, and network architecture consistent with typical CQL settings, and I choose learning rates that are close to those used in the original CQL implementation.
+For evaluation, I train with four random seeds. For each seed, I evaluate on eight independent environments and average the scores.
 
-So I selected default value of $\alpha^\prime$ as $0.01$.
-
-\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
-
-To better understand the penalization term, I monitored the $L_2$ penalization term during training.
-
-Intuitively, I expected this term to decrease.
-Implicitly decreasing Q value in which the action sampled by policy is varies from the action sampled from dataset.
-Then the policy would avoid penalized Q values and prefer to the actions that is close to the dataset actions.
-
-However, the plot shows that the magnitude penalty actually has been unchanged throughout training.
-
-This suggests that the $L_2$ penalty on the critic alone is not enough; we need an additional regularization directly on the policy to keep it near the behavior distribution.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-This leads to my second framework, which adds an explicit regularization term on the policy.
+Here are the main experimental results. In AntMaze, the environments differ by maze size and dataset type. I run experiments on six variants, and the table shows the scores for each algorithm, averaged over the four seeds.
+The CQL scores I obtain are lower than those reported in the original paper. One reason is that the dataset versions differ: the original CQL paper used version 0 of the D4RL datasets, whereas I use version 2. In addition, when I inspected both the paper and the official code, I found some mismatches between the published equations and the implementation, so for these experiments I re-implemented CQL from scratch, guided by both sources.
 
-In policy evaluation, I keep the same critic update as before: the critic matches the Bellman target minus the $L_2$-based penalty between policy actions and dataset actions.
+As you can see from the numbers, the umaze environments are the easiest, so the scores are highest there. As we move to medium and large mazes, the tasks become harder and the scores drop. The ``diverse'' datasets are also more challenging, and performance is generally lower on them.
+In this first set of results, my proposed algorithm performs worse than the CQL baselines.
+\bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-In policy improvement, I add a KL regularization term between the learned policy and the behavior policy. The policy still maximizes conservative Q-values, but is penalized for deviating too much from the behavior distribution, counteracting the drift we saw earlier.
-
-In practice, when training, we do not know the behavior policy $\beta$ explicitly; we can only see its samples in the dataset, so we cannot compute the KL divergence in closed form.
-
-To address this problem, I use the approximation techniques called a lagrangian dual, which is the bypassing KL regularization based on log-probability differences. For each state, I compare the log-probability that the policy assigns to its own sample with the log-probability it assigns to the dataset action, and encourage this gap to stay below a target threshold, $\tau$.
-
-This leads to a pair of coupled minimization problems: one over the policy parameters, which try to maximize Q-values while keeping the gap small, and one over the dual parameter that enforces the threshold. Intuitively, this keeps dataset actions sufficiently likely relative to policy samples, pulling the policy back toward the data when it drifts.
+Next, I investigated how sensitive my first algorithm is to its hyperparameters.
+First, I varied the hyperparameter $N$, which controls how many actions are sampled when computing the critic penalty term. I tried $N=5, 10, 25$.
+The results suggest that performance does not strongly depend on $N$. I therefore chose $N=10$ as a reasonable default.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-Finally, I compare four methods: CQL H, CQL Lagrangian, my method without KL regularization, and my method with KL regularization.
-
-On AntMaze-umaze-v2, the KL-regularized version achieves performance close to the CQL baseline, though not fully matching it. On some medium tasks such as medium-play and medium-diverse, the KL-regularized method clearly outperforms the non-regularized version, which essentially fails.
-
-The penalty term of the $L_2$ penalization term with KL regularization is also much more lower: the penalty decreases, indicating that the policy stays better constrained around the dataset density.
-
-Overall, while not yet competitive with the very best CQL configurations on every task, adding KL regularization on top of the $L_2$ penalty improves both stability and performance compared to using the $L_2$ penalty alone.
+Second, I varied $\alpha^\prime$, which determines the relative scale of the penalty term.
+In the table, you can see a case where $\alpha^\prime$ is set to $10^{-12}$, which is effectively zero. Performance in that setting is poor, likely because the penalty is too weak to prevent overestimation.
+When $\alpha^\prime$ is larger, performance tends to improve, so I chose $0.01$ as a default value.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-% To summarize: offline RL suffers from overestimation because the critic must extrapolate to out-of-distribution actions proposed by the learned policy. Conservative Q-Learning addresses this by adding a penalty based on a density ratio between an auxiliary policy and the behavior policy, but that does not directly capture distances in continuous action space.
-
-% I instead proposed an $L_2$-distance-based penalty between dataset actions and policy actions in the critic update. On its own, this can cause the policy to drift away from the dataset, as reflected by a growing penalization term. To counteract that drift, I added a KL-style regularization on the policy, approximated via a Lagrangian formulation using log-probability differences between dataset actions and policy samples.
-
-% Empirically, combining an $L_2$-based penalty in the critic with KL regularization on the policy stabilizes training and improves performance on some AntMaze tasks relative to the non-regularized version, suggesting that this combination is a promising direction for continuous-action offline RL.
-
-% \bigskip\noindent\textbf{--- Slide 17: References ---}
-
-% The references slide lists the main papers I relied on, including the original CQL paper and the D4RL benchmark paper. I will not read this slide, but it is there for anyone who wants to look up further details.
-
-% \bigskip\noindent\textbf{--- Slide 18: Appendix -- Hyperparameters (CQL of H) ---}
+My method uses Euclidean distance as a penalty term, so I also checked how this distance changes during training.
+From the graph, you can see that the average distance does not decrease much as training proceeds. This means that simply penalizing the critic is not enough for the policy to learn to stay close to the behavior policy.
+What I originally hoped to see was that this distance would gradually shrink as training went on, but the graph shows a different pattern. This led me to the conclusion that I need to add a regularization term directly to the policy objective, encouraging the policy to sample actions similar to those in the dataset.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-In the appendix, I briefly document the hyperparameters used for each method.
+This motivates my second method, which adds a KL divergence term on top of the first framework. The idea is to train the policy to have a probability density close to the behavior policy, so that the penalty term decreases over training as the policy stays near the data.
+However, we face a problem: we do not know the behavior policy explicitly, we only have samples from it. Therefore we cannot compute the log-probabilities of $\beta$ and the KL divergence in closed form.
 
-For CQL H, I use a Q-function learning rate of three times ten to the minus four, and sweep the conservative coefficient $\alpha'$ over a small range such as five and ten, with the underlined value indicating the setting used in the main experiments.
+To circumvent this, I apply the Lagrangian dual form of the KL divergence. In this formulation, the coefficient $\alpha$ of the KL term becomes a learnable parameter.
 
-For CQL Lagrangian, I again use a Q-function learning rate of three times ten to the minus four. Instead of a fixed $\alpha'$, I tune the Lagrangian threshold parameter, which sets the target level of conservatism, sweeping over values like five and ten.
-
-This two CQL algorithms strictly follows the original paper.
-
-For my method without KL regularization, I vary several hyperparameters: the Q-function learning rate from one to three times ten to the minus four, the $L_2$ penalty coefficient $\alpha'$ over a wide range from extremely small to around zero point three, and the number of action samples for the $L_2$ penalty over five, ten, and twenty-five.
-
-Finally, for my method with KL regularization, I fix the number of samples for the $L_2$ penalty, sweep the learning rate for the KL dual parameter over a small range, and also sweep the $L_2$ penalty coefficient $\alpha'$ and the KL threshold over reasonable values.
+From the equations at the bottom of the slide, you can see how $\alpha$ is updated so that the KL divergence approaches a target threshold $\tau$. If the KL is larger than $\tau$, $\alpha$ increases to penalize it more strongly; if it is smaller, $\alpha$ decreases.
 
 \bigskip\noindent\textbf{-----------------------------------------------------------------------------}
 
-Thank you for your attention.
+Finally, here are the results for the second framework.
+On some of the medium tasks where CQL and my first method struggled, the KL-regularized version achieves non-trivial performance.
+
+Moreover, with KL regularization, the penalty term in the critic actually decreases over time, indicating that the policy remains better aligned with the dataset.
+Taken together, these results provide some evidence that my proposed method can outperform plain CQL in certain regimes.
+
+Thank you for listening.
 
 \end{document}
 
