--- a/lectures/drl/final_report/iclr2026_conference.sty
+++ b/lectures/drl/final_report/iclr2026_conference.sty
@@ -18,6 +18,8 @@
 \usepackage{eso-pic} % used by \AddToShipoutPicture
 \RequirePackage{fancyhdr}
 \RequirePackage{natbib}
+% load AMS packages so math symbols like \triangleq are available
+\RequirePackage{amsmath,amssymb}
 
 % modification to natbib citations
 \setcitestyle{authoryear,round,citesep={;},aysep={,},yysep={;}}
